增加参数配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,21 @@ spring.main.banner-mode=off
 
 # 配置Ball登录信息
 ball.cookie=
+# 7人场标识
 ball.venueTypeID=
 ball.xsrfToken=
+# 打印HTTP响应内容
 ball.printResponseBody=false
 # 0 第一场次  1 第二场次
 ball.billTime=2
 # 自动化启动
 ball.autoSetup=true
+# 自动执行是否受请求数量限制
 ball.autoSetupCountLimit=true
+#ball.intervalTime
 # 是否异步执行HTTP
 ball.asyncHttp=true
+#ball.retryCount
 
 # 直接订场配置
 ball.directOrder=true
